[project]
name = "injection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Krzysztof Stronka", email = "kstronka@apptension.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
